...
            android:text="@string/title_welcome_subtitle"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"/>

        <com.google.android.gms.common.SignInButton
            android:layout_marginTop="20dp"
            android:id="@+id/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/button_sign_out"
            android:layout_marginTop="10dp"
...
